--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
 {% include header.html %}
 <br/>
 <main>
-    <div class="container">
+    <div class="container" class="editable">
         {{ content }}
     </div>
 </main>
